Closed Bug 111287 Opened 23 years ago Closed 23 years ago

dbm port for QNX6 is not correct

Categories

(SeaMonkey :: General, defect)

All
Neutrino
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla0.9.7

People

(Reporter: dinglis, Assigned: wtc)

Details

Attachments

(1 file, 1 obsolete file)

dbm code for QNX6 (__QNXNTO__) is not correct. 
causes crash when crypto to enabled.
Attached patch patch to fix QNX6 port (obsolete) — Splinter Review
I will take this bug.

The patch is fine except for the use of the C++ comment delimiter //.
Question: What's the difference between __QNX__ and __QNXNTO__?
It seems that __QNXNTO__ is not defined for QNX4 but is defined for QNX6?
Assignee: asa → wtc
I fixed the C++ comment delimiter // in Dave Inglis's patch.
Attachment #58754 - Attachment is obsolete: true
I checked in the fix.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla0.9.7
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: