Bugzilla bug 111287: checked in a patch from Dave Inglis <dinglis@qnx.com> to fix the QNX6 port of dbm.  r=wtc. Modified files: include/mcom_db.h src/hash.c