dbm/include/mcom_db.h
@@ -174,9 +174,13 @@
 #endif
 
 #ifdef __QNX__
+#ifdef __QNXNTO__
+#include <sys/param.h>
+#else
 #define LITTLE_ENDIAN	1234
 #define BIG_ENDIAN	4321
 #define BYTE_ORDER	LITTLE_ENDIAN
+#endif
 #endif
 
 #ifdef SNI
